...
                            <constraint firstItem="cy0-ca-Xm9" firstAttribute="leading" secondItem="FjG-bC-dcK" secondAttribute="leading" id="mm1-cw-NlG"/>
                            <constraint firstItem="cTV-Di-WE9" firstAttribute="leading" secondItem="FjG-bC-dcK" secondAttribute="leading" id="tvl-21-B2U"/>
                            <constraint firstItem="cy0-ca-Xm9" firstAttribute="trailing" secondItem="FjG-bC-dcK" secondAttribute="trailing" id="y4u-QL-pSi"/>
                            <constraint firstItem="cTV-Di-WE9" firstAttribute="top" secondItem="MNf-5Z-om8" secondAttribute="top" id="z1b-dI-5e9"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="All" id="Xne-do-Cb4">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="menu" id="40e-cX-NJv">
                            <color key="tintColor" systemColor="systemTealColor"/>
                            <connections>
                                <action selector="tapMenu:" destination="V3N-VV-Pda" id="a9a-cG-jEd"/>
                            </connections>
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem title="addNote" image="square.and.pencil" catalog="system" id="KgC-RH-vSI">
                                <color key="tintColor" systemColor="systemTealColor"/>
                                <connections>
                                    <segue destination="hco-nt-dVO" kind="show" id="WP6-rf-pVF"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="확인" id="E1z-cr-Tge">
...
                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zgX-FF-o3g">
                                                    <rect key="frame" x="0.0" y="0.0" width="83.5" height="34"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <subviews>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Tag" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="F4f-IC-Unv">
                                                            <rect key="frame" x="0.0" y="0.0" width="83.5" height="34"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="tapTextField"/>
                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                        </textField>
                                                    </subviews>
                                                    <constraints>
                                                        <constraint firstAttribute="trailing" secondItem="F4f-IC-Unv" secondAttribute="trailing" id="OXH-fc-XyL"/>
...
                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VcF-rt-0XW">
                                                            <rect key="frame" x="37" y="3" width="20" height="20"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="tagDeleteButton"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="20" id="7bF-pC-wzk"/>
                                                                <constraint firstAttribute="width" secondItem="VcF-rt-0XW" secondAttribute="height" multiplier="1:1" id="d1s-6x-wy3"/>
                                                            </constraints>
                                                            <color key="tintColor" systemColor="systemTealColor"/>
                                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                                    <outlet property="tagNameLabel" destination="s5I-ZI-tYJ" id="xgP-Gq-zzl"/>
                                                    <outlet property="tagRemoveButton" destination="VcF-rt-0XW" id="dWs-ds-gaX"/>
                                                </connections>
                                            </collectionViewCell>
                                        </cells>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="tagCollectionView"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <outlet property="dataSource" destination="hco-nt-dVO" id="JLf-68-pV7"/>
                                        </connections>
                                    </collectionView>
                                </subviews>
...
                            <constraint firstItem="k81-4D-6lO" firstAttribute="trailing" secondItem="DCe-Ku-Ahm" secondAttribute="trailing" id="Oiv-Af-Qgg"/>
                            <constraint firstItem="teu-dj-Hhj" firstAttribute="trailing" secondItem="DCe-Ku-Ahm" secondAttribute="trailing" id="c50-XE-jLJ"/>
                            <constraint firstItem="teu-dj-Hhj" firstAttribute="top" secondItem="DCe-Ku-Ahm" secondAttribute="top" constant="12" id="h9X-Gc-k1S"/>
                            <constraint firstItem="teu-dj-Hhj" firstAttribute="leading" secondItem="DCe-Ku-Ahm" secondAttribute="leading" constant="12" id="z5C-3v-4Kt"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="New" largeTitleDisplayMode="never" id="H7Q-Cx-CsH">
                        <rightBarButtonItems>
                            <barButtonItem title="keyboardHide" image="keyboard" id="7zE-co-y5K">
                                <color key="tintColor" systemColor="systemTealColor"/>
                                <connections>
                                    <action selector="tapEndEditButton:" destination="hco-nt-dVO" id="yLC-jT-dOA"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Item" image="ellipsis.circle" catalog="system" id="jdl-Ao-gvX">
...
